hambuger menu done
add a hamburger menu and make it functional

--- a/components.html
+++ b/components.html
@@ -19,7 +19,7 @@
                   <a href="index.html"><img src="images/logo.svg" alt="Kylie's logo"></a>
               </div>
               <div class="site-header__menu-icon">
-                  <a href="#" class="js-menu-toggle"><img src="images/menu.svg" width="30"></a>
+                  <a href="#" class="js-menu-toggle"><img  class="menu_logo"  src="images/menu.svg" width="30"></a>
               </div>
                  <nav class="site-header__nav is-flex js-menu" data-open = "0">
                   <ul class="is-flex">
