--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <div class="wrapper">
         <div class="section_wrap">
             <header>
-                <div class="header_wrapper">
-                    <div class="site-header is-flex">
+                <div class="container">
+                    <div class="site-header__wrapper is-flex align_center text_align">
                         <div class="site-header__logo">
-                            <a href="index.html"><img src="images/logo.svg" alt="Kylie's logo"></a>
+                            <a href="index.html"><img src="images/logo.svg" alt="A logo of Kylie's, it's her face"></a>
                         </div>
                         <div class="site-header__menu-icon">
-                            <a href="#" class="js-menu-toggle"><img src="images/menu.svg" width="30"></a>
+                            <a href="#" class="is-menu-toggle"><img class="is-menu-icon" src="images/menu.svg" alt="" width="45"></a>
                         </div>
-                        <nav class="site-header__nav is-flex js-menu" data-open = "0">
-                            <ul class="is-flex">
-                                <li><a href="about.html">About</a></li>
+                        <nav class="site-header__menu" data-open="0">
+                            <a href="#" class="close-btn"><img src="images/close.svg" alt="close button" width="50"></a>
+                            <ul class="nav_menu_ul is-flex">
+                                <li><a class="nav_menu_a" href="about.html">About</a></li>
                                 <li><a href="UIUX_discipline.html">UI/UX</a></li>
                                 <li><a href="branding.html">Branding</a></li>
                             </ul>
@@ -80,6 +81,7 @@
                     <a href="#" title="Go To See More My Works" target="_blank">See More My Works!
                 </button>
             </section>
+            <script src="scripts/script.js"></script>
         </main>
         <footer>
             <div class="footer_sm is-flex justi_cen">
