--- a/UIUX_discipline.html
+++ b/UIUX_discipline.html
@@ -37,12 +37,14 @@
             <section class="homepage_work">
                 <div class="homepage_work_wrap">
                     <h1 class="disci_heading text_align">UI/UX</h1>
+                    <!-- Container of the works  -->
                     <div class="disci_container_wrap">
+                        <!-- Work1 -->
                         <div class="disci_container align_center">
                             <div class="img_left">
                                 <a href="#"><img src="images/paru_cover.jpg" alt="A UIUX work designed from Kylie"></a>
                             </div>
-                            <!-- Work1 -->
+                            <!-- Work1_content -->
                             <div class="disci_content">
                                 <a href="#"><h2>Pa-ru</h2></a>
                                 <a href="#"><h4>Accessories Online Shop</h4></a>
@@ -55,23 +57,29 @@
                             <div class="img_left">
                                 <a href="#"><img src="images/hisani_cover.jpg" alt="A UIUX work designed from Kylie"></a>
                             </div>
+                            <!-- Work 2_content -->
                             <div class="disci_content">
                                 <a href="#"><h2>Hisani</h2></a>
                                 <a href="#"><h4>Omakase Restaurant</h4></a>
                                 <a href="#"><p style="margin-bottom: 20px;">UIUX strategy and case study</p></a>
                                 <button class="btn" style="margin-bottom: 20px;">View Full Project!!</button>
                             </div>
-                    </div>
-                        <!-- Testing: -->
-                        <!-- <div class="disci_container col-12-sm col-12-md col-7-lg">
-                            <a href="#"><img src="images/paru_cover.jpg" alt="A UIUX work designed from Kylie"></a>
-                            <div class="disci_content">
-                                <a href="#"><h2>Pa-ru</h2></a>
-                                <a href="#"><h4>Accessories Online Shop</h4></a>
-                                <a href="#"><p style="margin-bottom: 20px;">UIUX strategy and case study</p></a>
-                                <button class="btn">View Full Project!!</button>
+                        </div>
+                        <!-- Work3 -->
+                        <div class="disci_container align_center">
+                            <div class="img_left">
+                                <a href="details_c4choco.html"><img src="images/hisani_cover.jpg" alt="A UIUX work designed from Kylie"></a>
                             </div>
-                        </div> -->
+                            <!-- Work 3_content -->
+                            <div class="disci_content">
+                                <a href="details_c4choco.html"><h2>c4choco</h2></a>
+                                <a href="details_c4choco.html"><h4>Illustration</h4></a>
+                                <a href="details_c4choco.html"><p style="margin-bottom: 20px;">My illustration brand</p></a>
+                                <button class="btn" style="margin-bottom: 20px;">
+                                    <a href="details_c4choco.html">View Full Project!!</a>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
