--- a/details_c4choco.html
+++ b/details_c4choco.html
@@ -42,36 +42,44 @@
             <p>Personal Brand</p>
         </div>
     </section>
-     <!-- Center Logo -->
-    <div class="is-flex justi_cen">
-        <img class="c4_arti_logo" src="images/logo.svg" alt="a logo from Kylie">
-    </div>
     <!-- Top head - Yellow hero section -->
-    <section class="bg_yel art_sections">
-        <div class="is-flex justi_cen arti_hero_bg">
-            <img class="c4_choco_creami" src="images/c4_choco_creami.png" alt="A logo from c4choco">
-        </div>
-        <div class="top_content">
-            <h3>Role</h3>
-            <ul>
-                <li>Illustrator</li>
-                <li>Product Designer</li>
-                <li>Marketer</li>
-            </ul>
-            <h3>Duration</h3>
-            <ul>
-                <li>Ongoing</li>
-            </ul>
-            <h3>Tools</h3>
-            <ul>
-                <li>Procreate</li>
-                <li>Adobe Illustrator</li>
-                <li>Photoshop</li>
-            </ul>
-            <h3>Introduction</h3>
-            <ul>
-                <li>This is my personal drawing account established in early 2020 on Instagram. This brand aims to share the funny daily life stories of mine and with my bunnies. </li>
-            </ul>
+    <section class="bg_yel art_sections artifact-overview">
+        <div class="top_container">
+            <div class="arti_hero_bg is-flex justi_cen">
+                <img class="c4_choco_creami" src="images/c4_choco_creami.png" alt="A logo from c4choco">
+            </div>
+            <div class="top_content">
+                <div class="is-grid">
+                    <div class="col-12-sm col-4-md col-4-lg">
+                        <h3>Role</h3>
+                        <ul class="col-12-sm col-6-md col-4-lg">
+                            <li>Illustrator</li>
+                            <li>Product Designer</li>
+                            <li>Marketer</li>
+                        </ul>
+                    </div>
+                    <div class="col-12-sm col-4-md col-4-lg">
+                        <h3>Duration</h3>
+                        <ul class="col-12-sm col-6-md col-4-lg">
+                            <li>Ongoing</li>
+                        </ul>
+                    </div>
+                    <div class="col-12-sm col-4-md col-4-lg">
+                        <h3>Tools</h3>
+                        <ul class="col-12-sm col-6-md col-4-lg">
+                            <li>Procreate</li>
+                            <li>Adobe Illustrator</li>
+                            <li>Photoshop</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="top_content_intro">
+                    <h3>Introduction</h3>
+                    <ul>
+                        <li>This is my personal drawing account established in early 2020 on Instagram. This brand aims to share the funny daily life stories of mine and with my bunnies. </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
     <!-- c4choco logo -->
@@ -80,29 +88,39 @@
     </div>
     <!-- Second Section: Introduction about c4choco -->
     <section class="art_sections">
-        <h3>What is c4choco?</h3>
-        <p>C4choco is an illustration brand that I started in 2020 during the pandemic. I started this drawing account because I want to record my daily life with my bunnies Choco and Creami. The brand name c4choco (c for choco) means “everything about Choco".</p>
-        <h3>Brand Story</h3>
-        <p>C4choco is a brand run by a professional rabbit-owner. The artwork from C4choco is mostly describing interesting daily life stories about interacting with bunnies, sharing love with each other. In my drawings, I want to contain a positive message of how fun it would be if you’re having a bunny as a pet.</p>
+        <div class="art_space">
+            <h3>What is c4choco?</h3>
+            <p>C4choco is an illustration brand that I started in 2020 during the pandemic. I started this drawing account because I want to record my daily life with my bunnies Choco and Creami. The brand name c4choco (c for choco) means “everything about Choco".</p>
+        </div>
+        <div class="art_space">
+            <h3>Brand Story</h3>
+            <p>C4choco is a brand run by a professional rabbit-owner. The artwork from C4choco is mostly describing interesting daily life stories about interacting with bunnies, sharing love with each other. In my drawings, I want to contain a positive message of how fun it would be if you’re having a bunny as a pet.</p>
+        </div>
     </section>
     <!-- Third Section: Characters -->
     <section class="art_sections">
-        <h3>who is Choco? Is there any other characters?</h3>
-        <div class="is-grid text_align">
-            <div class="c4_characters col-12-sm col-4-md col-4-lg">
+        <h3>Who is Choco? Is there any other characters?</h3>
+        <div class="is-grid text_align art_space">
+            <div class="c4_characters col-12-sm col-6-md col-4-lg">
                 <img src="images/characters_suihi.png" alt="">
-                <h4>Suihi</h4>
-                <p>Suihi is the owner, taking care of their life everyday. She sometimes can hear some words from Choco and Creami, that makes their relationship more closer.</p>
+                <div class="characters art_space">
+                    <h4>Suihi</h4>
+                    <p>Suihi is the owner, taking care of their life everyday. She sometimes can hear some words from Choco and Creami, that makes their relationship more closer.</p>
+                </div>
             </div>
-            <div class="c4_characters col-12-sm col-4-md col-4-lg">
+            <div class="c4_characters col-12-sm col-6-md col-4-lg">
                 <img src="images/characters_choco.png" alt="">
-                <h4>Choco</h4>
-                <p>Choco is a grey and white color bunny who can understand human language. She is a smart rabbit and always looking after her sister</p>
+                <div class="characters art_space">
+                    <h4>Choco</h4>
+                    <p>Choco is a grey and white color bunny who can understand human language. She is a smart rabbit and always looking after her sister.</p>
+                </div>
             </div>
-            <div class="c4_characters col-12-sm col-4-md col-4-lg">
+            <div class="c4_characters col-12-sm col-6-md col-4-lg">
                 <img src="images/characters_creami.png" alt="">
-                <h4>Creami</h4>
-                <p>Creami, who has a beautiful pattern with white and grey scolor in her head and back.</p>
+                <div class="characters art_space">
+                    <h4>Creami</h4>
+                    <p>Creami, who has a beautiful pattern with white and grey scolor in her head and back.</p>
+                </div>
             </div>
         </div>
     </section>
