Fix favicon implementation across all HTML pages
- Added proper favicon.ico link
- Added SVG logo as modern favicon
- Added Apple touch icon for mobile devices
- Ensures favicon displays correctly in all browsers

--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
     <meta property="og:url" content="http://kylieaoichan.com/">
     <meta property="og:image" content="https://kylieaoichan.com/images/logo.svg" >
     <meta property="og:type" content="website" >
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+    <link rel="apple-touch-icon" href="images/logo.svg">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/header.css">
