Update greeting text in index.html from "Hello" to "Hi"

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="hero container">
                 <!-- Greeting -->
                 <div class="hero-greeting">
-                    <h1 class="self-span">Hello👋🏻 I'm Kylie</h1>
+                    <h1 class="self-span">Hi👋🏻 I'm Kylie</h1>
                     <img class="home-self" src="./images/ky_img.png">
                 </div>
                 <!-- self-intro -->
