Update hero-intro section in index.html to reflect a new branding message emphasizing product design and marketing.

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 </div>
                 <!-- self-intro -->
                 <div class="hero-intro">
-                    <h1 class="h2">
-                        A UX Engineer blending <span class="shilo">design</span>, <span class="brightBlue">development</span>, and <span class="blue">marketing strategy</span> to create impactful solutions.
-                    </h1>
+                    <h2 class="h2">
+                        A Unicorn of <span class="shilo">Product Design</span> and <span class="brightBlue">Markeitng</span> 
+                    </h2>
                 </div>
                 <!-- See my work -->
                 <div>
