Refine hero-intro text in index.html to emphasize problem-solving skills alongside product design and marketing.

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 </div>
                 <!-- self-intro -->
                 <div class="hero-intro">
-                    <h2 class="h2">
-                        A Unicorn of <span class="shilo">Product Design</span> and <span class="brightBlue">Markeitng</span> 
+                    <h2 class="h1">
+                        A problem solver with a blend of <span class="shilo">Product Design</span> and <span class="brightBlue">Markeitng</span> 
                     </h2>
                 </div>
                 <!-- See my work -->
